--- a/style/style_admin.css
+++ b/style/style_admin.css
@@ -5,6 +5,7 @@
 
 nav{
 width: 100%;
+background-color: #1877f2;;
 }
 
 ul li a{
@@ -18,54 +19,172 @@ ul li a:hover{
 }
 
 ul{
-    background-color:grey;
+    background-color:#1877f2;
     display:flex;
     list-style-type: none;
     justify-content: space-between;
 }
 .student{
-    background-color: blue;
+    background-color: white;
+    padding: 15px;
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
 }
 
+.student form p span{ font-weight: bold;}
+
+
+.student form p{
+
+    margin-bottom: 5px;
+}
+
+.student form button {
+    background-color: #1877f2;
+    color: white;
+    font-size: 17px;
+    border-color: white;
+    border-radius: 7px;
+    cursor: pointer;
+    margin: auto;
+
+}
 .all-students{
-    background-color:white;
     display:flex;
      gap:20px;
+     justify-content: space-between ;
 }
 
 .welcome{
 margin-top: 5%;
 margin-bottom: 5%;
 text-align: center;
+background-color: #FDFFFC;
 }
 
-.all-courses img{
+.welcome span{ color:#1877f2;}
+
+.cours img{
     width: 50%;
 }
 
 .all{
     padding: 8px 8px;
     width: 100%;
-    background-color: green;
-    margin: 20px;
-}
-
-.all-students{
-    background-color: green;
+    display:block;
+    flex-wrap: wrap;
+    background-color: #1877f2;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 .all h2{
-    text-align:center;
-    color:white;
+    color: #FDFFFC;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 25px;
 }
 
-.cours{
-    display:block;
 
-    border: 1px solid black;
+.cours{
+    display:flex;
+    flex-direction: column;
+    width: 30%;
+   background-color: #FDFFFC;
+   border-radius: 10px;
+   justify-content: center;
+   align-items: center;
+}
+
+.cours h4{
+    text-decoration: underline;
+    color: #1877f2;
+    margin-bottom: 7px;
+}
+
+
+.cours p{
+    margin-bottom: 7px;
+}
+.cours span {
+
+    font-weight: bold;
+}
+
+.cours form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.cours img{
+margin-bottom: 6px;
+
+}
+
+
+.cours form button {
+    font-size: 15px;
+    background-color: #1877f2;
+    color: white;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+    padding:6px;
+    border:1px solid white;
+    border-radius: 10px;
+}
+
+
+.cours button:hover{
+    font-weight: bold;
+    color:#1877f2;
+    background-color: white;
+    border:2px solid #1877f2;
 }
 
 .all-courses{
-    gap:5%;
+    gap:10px 20px;
     display:flex;
     flex-wrap: wrap;
+    flex-direction: row;
 }
+
+
+.header{
+    background-color: #1877f2;
+    display:flex;
+    justify-content: space-between;
+align-items: center;
+}
+.header nav {
+    margin-right: 30px;
+    margin-left: 20px;
+}
+.header img {
+    width: 75px;
+    border-radius: 80%;
+}
+.header nav ul li{
+    margin-left: 10px;
+    background-color: white;
+    padding:3px;
+    border-radius: 7%;
+}
+
+.header nav ul {
+    display: flex;
+    list-style-type:none ;
+}
+
+.header nav ul li a{
+color: #1877f2;
+text-decoration: none;
+}
+
