--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,8 @@ min-height: 100vh;
 background-color: #1877f2;
 }
 
+.form_connexion_inscription h1{ text-align: center;}
+
 
 .form_connexion_inscription{
     display:flex;
@@ -166,4 +168,36 @@ word-break:break all;
     color:#fff;
     font-size:13px;
     cursor:pointer;
+}
+
+.resultats{
+    background-color: white;
+    border-radius: 15px;
+    padding:20px;
+}
+
+.resultat h1{
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
+.question_error{
+    font-weight: bold;
+    font-style:italic;
+}
+
+.reponse_vrai{
+    font-style:italic;
+    color:green;
+    font-weight: bold;
+}
+
+.note{
+    margin-top: 20px;
+    font-weight: 700;
+}
+
+.color{
+
+    color:#999;
 }
