--- a/style/style_admin.css
+++ b/style/style_admin.css
@@ -32,6 +32,7 @@ ul{
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
+    width: 20%;
 }
 
 .student form p span{ font-weight: bold;}
@@ -56,6 +57,7 @@ ul{
     display:flex;
      gap:20px;
      justify-content: space-between ;
+     flex-wrap: wrap;
 }
 
 .welcome{
@@ -85,7 +87,7 @@ background-color: #FDFFFC;
 .all h2{
     color: #FDFFFC;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     font-size: 25px;
 }
 
@@ -117,7 +119,7 @@ background-color: #FDFFFC;
 
 .cours form {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
